[workspace]
resolver = "2"
members = [
    "common",
    "bddcore",
    "mddcore",
    "bss",
    "mss",
]

[workspace.package]
version = "0.4.0"
authors = ["Hiroyuki Okamura <okamu@hiroshima-u.ac.jp>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/okamumu/rust-dd"
rust-version = "1.75"
