[package]
name = "relib-bdd"
description = "Binary Decision Diagrams (BDD) and Zero-suppressed BDDs (ZDD) for the relib reliability toolkit (engine behind the relibmss Python package)."
keywords = ["decision-diagram", "bdd", "zdd", "reliability"]
categories = ["data-structures", "science"]
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "bddcore"

[dependencies]
common = { path = "../common", version = "0.13.0", package = "relib-common" }

[package.metadata.docs.rs]
all-features = true
