[package]
name = "relib-bss"
description = "Binary-state system (BSS) reliability analysis over BDDs: probability, path/cut enumeration, minimal solutions, k-of-n, counting. Engine behind the relibmss Python package."
keywords = ["reliability", "bdd", "fault-tree", "minimal-cut-set"]
categories = ["science", "data-structures"]
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "bss"

[dependencies]
bddcore = { path = "../bddcore", version = "0.10.0", package = "relib-bdd" }

[package.metadata.docs.rs]
all-features = true
