[package]
name = "relib-mdd"
description = "Multi-valued Decision Diagrams (MDD, MTMDD, MTMDD2) for the relib reliability toolkit (engine behind the relibmss Python package)."
keywords = ["decision-diagram", "mdd", "mtmdd", "reliability"]
categories = ["data-structures", "science"]
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "mddcore"

[dependencies]
common = { path = "../common", version = "0.9.1", package = "relib-common" }

[package.metadata.docs.rs]
all-features = true
