[package]
name = "relib-mss"
description = "Multi-state system (MSS) reliability analysis over MTMDD2: state probability, minimal path/cut vectors, counting. Rust engine behind the relibmss Python package."
keywords = ["reliability", "mdd", "multi-state", "minimal-vector"]
categories = ["science", "data-structures"]
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "mss"

[dependencies]
mddcore = { path = "../mddcore", version = "0.6.0", package = "relib-mdd" }

[package.metadata.docs.rs]
all-features = true
